syntax = "proto3";

option go_package = "github.com/TekClinic/Patients-MicroService/auth_protobuf";

package patients;

service PatientsService {
  rpc GetPatient(PatientRequest) returns (Patient);
  rpc GetMe(MeRequest) returns (Patient);
}

message PatientRequest {
  string token = 1;
  string user_id = 2;
}

message MeRequest {
  string token = 1;
}

message Patient {
  string user_id = 1;
  string name = 2;
}